count of participants in the event - added tests